--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "cfenv": "^1.0.3",
-    "cloudant": "^1.5.1",
-    "express": "^4.13.4",
-    "https": "^1.0.0",
-    "pem": "^1.8.3",
-    "request": "^2.76.0",
-    "shipping-fedex": "^0.1.4"
+    "express": "^4.14.0",
+    "mongodb": "^2.2.11",
+    "request": "^2.78.0",
+    "shipping-fedex": "^0.1.5"
   },
   "author": "Joseph J. Zapantis",
   "repository": {
