--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "cfenv": "^1.0.3",
+    "cloudant": "^1.6.2",
     "express": "^4.14.0",
     "mongodb": "^2.2.11",
     "request": "^2.78.0",
